<resources>
    <string name="app_name">CobaltConnect</string>
    <string name="newly_updated">Newly Updated</string>
    <string name="Stock_details">Stock Details</string>
    <string name="title_activity_navigational_drawer">navigationalDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_signIn">Sign In</string>
    <string name="hint_cobalt_id">Enter Cobalt Id</string>
    <string name="hint_password">Password</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_forgot_password">Forgot your password ?</string>
    <string name="button_signIn">Sign In</string>
    <string name="text_account">Don\'t have an account ?</string>
    <string name="text_signUp">Sign Up</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment1</string>
    <string name="hint_full_name">Enter Full Name</string>
    <string name="hint_email_id">Enter Email Id</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_clover_id">Enter Clover Id</string>
    <string name="enter_clover_api_key">Enter Clover Api Key</string>
    <string name="enter_cobalt_id">Enter Cobalt Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="cobalt_id_is_your_login_id">(Cobalt Id is your Login Id)</string>
    <string name="i_accept">I accept</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="error_compulsory_field">This field is compulsory</string>
    <string name="error_spinner_field">Not Selected</string>
    <string name="error_password_field">Must contain at least one number,one uppercase letter, one lowercase letter and at least 5 or more characters </string>

    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="update_to_clover">Update to Clover</string>
    <string name="no_data_available">No Data Available</string>
    <string name="NewProduct">New :</string>
    <string name="queued">Queued :</string>
    <string name="processed">Processed :</string>
    <string name="others">Others :</string>
    <string name="last_fetch">Last Fetch :</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>

    <string-array name="navigation_drawer_items_array">
        <item>Newly Updated</item>
        <item>Stock Details</item>
        >

    </string-array>

</resources>
