<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect_cobalt_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context="com.a83idea.cobaltconnect.ui.activities.SignInActivity">


    <ImageView

        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/logo"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        />


    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/light_black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/text_signIn"/>



        <EditText
            android:id="@+id/cobalt_payment_id"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:lines="1"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:background="@drawable/rectangular_background"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_cobalt_id"/>



        <EditText
            android:id="@+id/user_password"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/text_color"
            android:lines="1"
            android:textStyle="normal"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:background="@drawable/rectangular_background"
            android:hint="@string/hint_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_remember_me"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/text_remember_me"
                android:textColor="@color/text_color"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_forgot_password"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:text="@string/text_forgot_password"/>


        </LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/button_signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_state_selector"
            android:id="@+id/button_sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:text="@string/text_account"
                />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_sign_up"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/text_signUp"
                android:textColor="@color/text_color"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>



