<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_connect_cobalt_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/signup_background"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.a83ideas.com.CobaltConnect1.ui.activities.SignInActivity">


    <ImageView

        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/logo"
        android:textColor="@color/light_black"
        android:textSize="25sp"
        />


    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_color"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/light_black"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/enter_cobalt_id"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangular_background"
            android:hint="@string/hint_cobalt_id"
            android:lines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:textStyle="normal"
            />


        <Button
            android:id="@+id/button_submit"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_state_selector"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/back"
            android:textColor="@color/text_color"/>
    </LinearLayout>


</LinearLayout>
