<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="com.a83ideas.com.CobaltConnect1.ui.fragments.NewlyUpdatedFragment">

    <!--  <EditText
          android:id="@+id/etSearch"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:hint="Search by item Name"


          />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.90"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/update_to_clover"
                    android:layout_width="110dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/update_to_clover_button_state_selector"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/update_to_clover"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_data"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rectangular_background_new"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/NewProduct"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"

                    />

                <TextView
                    android:id="@+id/queued"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rectangular_background_queued"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/queued"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"

                    />

                <TextView
                    android:id="@+id/processed"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rectangular_background_processed"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/processed"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"

                    />

                <TextView
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:background="@drawable/rectangular_background_others"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/others"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"

                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:lines="1"
                android:text="Show"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"


                />

            <RelativeLayout
                android:id="@+id/rl_spinner"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_toEndOf="@+id/show"
                android:background="@drawable/rectangular_background_light_gray"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/arrow_down"/>

            </RelativeLayout>

            <TextView

                android:id="@+id/entries"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/rl_spinner"
                android:gravity="center"
                android:lines="1"
                android:text="entries"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"


                />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="150dp"
                android:layout_height="22dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rectangular_background_light_gray"
                android:drawableEnd="@drawable/icon_search"
                android:hint="Search"
                android:lines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp"
                android:textStyle="normal"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ly_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <include layout="@layout/item_list_header"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"

                >
            </ListView>

            <TextView
                android:id="@+id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:visibility="gone"
                />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textSize="13sp"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/prev"
                    android:layout_width="50dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_state_selector"
                    android:text="@string/prev"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    />

                <TextView
                    android:id="@+id/page_num"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rectangular_background"
                    android:gravity="center"
                    android:lines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="1"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"

                    />

                <Button
                    android:id="@+id/next"
                    android:layout_width="50dp"
                    android:layout_height="18dp"
                    android:background="@drawable/button_state_selector"
                    android:lines="1"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    />


            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
